--- a/Application-Form.html
+++ b/Application-Form.html
@@ -30,8 +30,7 @@
 <header class="bg-blue-700 text-white shadow-lg">
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
         <div class="text-2xl font-bold">
-            <i class="fas fa-road mr-2"></i>
-            Pathways to America
+          <img src="logopathway.png" alt="logopathway" style="width:300px">
         </div>
         <div class="md:hidden">
             <button id="menu-toggle" class="focus:outline-none">
@@ -143,13 +142,13 @@
                 <p>Paving the Way to US Citizenship</p>
             </div>
             <div>
-                <div class="mb-4">
-                    <a class="hover:underline block" href="#"><i class="fas fa-home mr-2"></i>Home</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-info-circle mr-2"></i>About Us</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-file-alt mr-2"></i>Apply Now</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-envelope mr-2"></i>Contact Us</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-user-secret mr-2"></i>Privacy Policy</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-file-contract mr-2"></i>Terms of Service</a>
+				<div class="mb-4">
+                    <a href="#"><i class="fas fa-home mr-2"></i>Home</a>
+                    <a href="#"><i class="fas fa-info-circle mr-2"></i>About Us</a>
+                    <a href="#"><i class="fas fa-file-alt mr-2"></i>Apply Now</a>
+                    <a href="#"><i class="fas fa-envelope mr-2"></i>Contact Us</a>
+                    <a href="#"><i class="fas fa-user-secret mr-2"></i>Privacy Policy</a>
+                    <a href="#"><i class="fas fa-file-contract mr-2"></i>Terms of Service</a>
                 </div>
             </div>
             <div>
