--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 <header class="bg-blue-700 text-white shadow-lg">
     <div class="container mx-auto flex justify-between items-center py-4 px-6">
         <div class="text-2xl font-bold">
-            <i class="fas fa-road mr-2"></i>
-            Pathways to America
+           <img src="logopathway.png" alt="logopathway" style="width:300px">
         </div>
         <div class="md:hidden">
             <button id="menu-toggle" class="focus:outline-none">
@@ -63,7 +62,7 @@
 
 <!-- Hero Section -->
 <section class="relative bg-gray-200">
-    <img alt="A diverse group of professionals including healthcare workers, engineers, and construction workers" class="w-full h-full object-cover" height="600" src="https://storage.googleapis.com/a1aa/image/4BIL5Xou0t6FJ9QgsCiqFO3rbBgR7e2WRzWKgxXpKUw1zWEKA.jpg" width="1920"/>
+    <img alt="A diverse group of professionals including healthcare workers, engineers, and construction workers" class="w-full h-full object-cover" height="600" src="https://storage.googleapis.com/a1aa/image/P8JLeKY9c63QFagHMFE27AuWpDpy8qGoR4SH4qBQj5cJpWEKA.jpg" width="1920"/>
     <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-center items-center text-center text-white">
         <h1 class="text-4xl font-bold mb-4">Achieve Your American Dream. Apply for Citizenship Today!</h1>
         <div class="space-x-4">
@@ -238,19 +237,18 @@
         <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-8 text-center md:text-left">
             <div>
                 <div class="text-2xl font-bold mb-4">
-                    <i class="fas fa-road mr-2"></i>
-                    Pathways to America
+                    <img src="logopathway.png" alt="logopathway" style="width:300px">
                 </div>
                 <p>Paving the Way to US Citizenship</p>
             </div>
             <div>
-                <div class="mb-4">
-                    <a class="hover:underline block" href="#"><i class="fas fa-home mr-2"></i>Home</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-info-circle mr-2"></i>About Us</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-file-alt mr-2"></i>Apply Now</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-envelope mr-2"></i>Contact Us</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-user-secret mr-2"></i>Privacy Policy</a>
-                    <a class="hover:underline block" href="#"><i class="fas fa-file-contract mr-2"></i>Terms of Service</a>
+				<div class="mb-4">
+                    <a href="#"><i class="fas fa-home mr-2"></i>Home</a>
+                    <a href="#"><i class="fas fa-info-circle mr-2"></i>About Us</a>
+                    <a href="#"><i class="fas fa-file-alt mr-2"></i>Apply Now</a>
+                    <a href="#"><i class="fas fa-envelope mr-2"></i>Contact Us</a>
+                    <a href="#"><i class="fas fa-user-secret mr-2"></i>Privacy Policy</a>
+                    <a href="#"><i class="fas fa-file-contract mr-2"></i>Terms of Service</a>
                 </div>
             </div>
             <div>
